--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         </div>
       </section>
 
-      <section class="card">
+     <!-- <section class="card">
         <div class="field">
           <label for="madhabSelect">मस्लक (Madhab) चुनें</label>
           <select id="madhabSelect">
@@ -420,7 +420,7 @@
           <p class="inline-note">मस्लक बदलते ही नीचे सोना/चांदी की गणना और कुल ज़कात योग्य संपत्ति अपडेट हो जाती है।</p>
           <p class="madhab-status" id="madhabStatus" aria-live="polite"></p>
         </div>
-      </section>
+      </section>-->
 
       <form id="zakatForm" novalidate>
         <div class="grid">
