--- a/index.html
+++ b/index.html
@@ -485,10 +485,10 @@
           </section>
 
           <section class="card split">
-            <h2>4️⃣ देनदारियां (फ़िलहाल देय)</h2>
+            <h2>4️⃣ देनदारियां</h2>
             <div class="field-grid">
               <div class="field">
-                <label for="loan">कर्ज (फ़िलहाल देय) (₹)</label>
+                <label for="loan">कर्ज (₹)</label>
                 <input type="number" id="loan" min="0" step="0.01" value="0" />
               </div>
               <div class="field">
