Add developer credit in the footer

--- a/index.html
+++ b/index.html
@@ -403,6 +403,12 @@
       .nisab-notes { margin-top: 1rem; color: #4b5563; font-size: 0.95rem; line-height: 1.5; }
       .nisab-notes ol { padding-left: 1.2rem; margin: 0; }
       .nisab-notes li { margin-bottom: 0.4rem; }
+      .developer-credit {
+        margin-top: 0.75rem;
+        font-size: 0.85rem;
+        color: #6b7280; /* slightly muted */
+        font-weight: 600;
+      }
     </style>
   </head>
   <body>
@@ -648,6 +654,7 @@
 
       <footer>
         यह कैलकुलेटर आम अंदाज़ा देता है। पेचीदा मामलों में किसी मुअतबर आलिम से मशविरा लें।
+        <p class="developer-credit">Developed by Sajid Ali Khan</p>
       </footer>
     </main>
 
