--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       padding: 8px;
     }
     /* small hero padding adjustment so overlap doesn't hide content */
-    .hero-content { padding-top: 40px; }
+    .hero-content { padding-top: 40px; text-aligh : center;}
   }
 
       .hero {
