--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
           <h3>क्या शामिल करें और क्या नहीं</h3>
           <ul>
             <li><strong>शामिल करें:</strong> नकद, बैंक बचत, सोना/चांदी, निवेश, बिजनेस स्टॉक।</li>
-            <li><strong>शामिल न करें:</strong> मुख्य निवास, निजी उपयोग की गाड़ी, घरेलू सामान, बिक्री के लिए नहीं होने वाले उपकरण।</li>
+            <li><strong>शामिल न करें:</strong> मुख्य निवास, क्रिप्टो, डिजिटल मुद्रा, निजी उपयोग की गाड़ी, घरेलू सामान, बिक्री के लिए नहीं होने वाले उपकरण।</li>
             <li><strong>देनदारियां:</strong> देय रकम घटाएं।</li>
           </ul>
         </article>
